--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <section class="mainsection_bottom">
           <div class="secondsection_bottom">
               <div class="secondsection_left">
-                <h2>Why <br>Schoolvoice <br>matter?</h2>
+                <h2 class="sec_head">Why <br>Schoolvoice <br>matter?</h2>
               </div>
 
               <div class="secondsection_right">
