--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <section class="Conversational_section">
             <div class="Conversational_div mw1140">
               <h2><span style="color:#3362D9">Conversational</span> and <span style="color:#3362D9">Engaging</span></h2>
-              <p class="Conversational_parag">School communication has now evolved beyond emails and SMS. With the right school-oriented features, Scholvoice is not just another Classdojo Alternative; it’s conversational, engaging, and instant. It’s your all-in-one school communication platform.</p>
+              <p class="Conversational_parag">School communication has now evolved beyond emails and SMS. With the right school-oriented features, Scholvoice is not just another ClassDojo Alternative; it’s conversational, engaging, and instant. It’s your all-in-one <a class="linkschool" href="https://schoolvoice.com/school-parent-app " target="_blank"> school-parent app</a> for school communication. </p>
             
             <div class="Conversational_bottom">
               <div class="Conversational_left">
@@ -132,7 +132,7 @@
             <div class="bestschool_appdiv mw1140">
                 <div class="headimgpara_divbest" id="headimgparabest">
                 <h2 class="head_bestschool">What makes <span style="color:#3362D9">Schoolvoice</span> one of <br> the top Classdojo Alternatives?</h2>
-                <p class="best_para">Schoolvoice comes with school oriented communication features and functionalities to ensure uninterrupted school communication. Here are some of the features that make Schoolvoice one of the top ClassDojo alternatives. </p>
+                <p class="best_para"><a class="linkschool" href="https://schoolvoice.com" target="_blank"> Schoolvoice</a> comes with school oriented communication features and functionalities to ensure uninterrupted school communication. Here are some of the features that make Schoolvoice one of the top ClassDojo alternatives. </p>
 
                 </div>
 
